syntax = "proto3";
package user;
option go_package = "user";

service User {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string user = 1;
    string password = 2;
}
message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}
